--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,5 +23,12 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
+    <script>
+      let landingPage = document.querySelector('.landing');
+      console.log(landingPage);
+      if(landingPage!=null){
+        console.log('first')
+      }
+    </script>
   </body>
 </html>
